fixed horizontal scroll

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -172,7 +172,6 @@ a {
   grid-template-columns: repeat(2, 1fr);
   padding-bottom: 0;
   margin-bottom: 0;
-  padding-left: 0.5%;
 }
 
 .screen {
